--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>jackson-dataformat-csv</artifactId>
 			<version>2.9.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox-app</artifactId>
+			<version>2.0.24</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.data</groupId>-->
 <!--			<artifactId>spring-data-mongodb</artifactId>-->
